# diff-tissue

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  analyze_output.py  config.yml  diffeomorphism.py  growth.py  init_systems.py  input_cells.json  inspect_study.py  learned_growth.py  main.py  morph.py  my_files.py  my_utils.py  param_search.py  plot_best_growth.py  plot_final_tissues.py  plot_growth.py  plot_morph.py  plotting.py  pyproject.toml  run_shape_opt.sh  setup.py  shape_opt.py  shapes.py  utils.py
.github/workflows/: ci.yaml
scripts/: analyze_output.py  best_growth.py  grid_search.py  inspect_grid_search.py  inspect_param_search.py  inspect_study.py  learned_growth.py  make_mapped_fields.py  make_metric_field.py  make_tutte_fields.py  morph.py  optimize_shape.py  param_search.py  plot_best_growth.py  plot_diffeomorphism.py  plot_final_tissues.py  plot_grid_search.py  plot_learned_growth.py  plot_mapped_fields.py  plot_mapped_metrics.py  plot_morphing.py  plot_tutte.py  plot_tutte_fields.py  run_all.sh  run_morphing.py  run_morphing.sh  run_shape_opt.py  run_shape_opt.sh
src/diff_tissue/: diffeomorphism.py  init_systems.py  io_utils.py  learned_growth.py  mapped_fields.py  morphing.py  my_files.py  my_utils.py  parameters.py  plotting.py  shape_opt.py  shapes.py  tutte.py  tutte_fields.py
src/diff_tissue/app/: config.py  experiments.py  grid_search.py  io_utils.py  learned_growth.py  learned_morph.py  morphing.py  param_search.py  parameters.py  plotting.py  searches.py  shape_opt.py  tutte.py  tutte_fields.py
src/diff_tissue/core/: init_systems.py  jax_bootstrap.py  metrics.py  morphing.py  my_utils.py  poly_identities.py  shape_opt.py  shapes.py  tutte.py  tutte_fields.py
src/diff_tissue/resources/: input_cells.json
tests/: test_metrics.py  test_shape_opt.py  test_shapes.py
