[project]
name = "diff-tissue"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.5.2",
    "jaxlib>=0.5.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "optax>=0.2.4",
    "scipy>=1.15.2",
    "torch>=2.6.0",
]
